# DBSaaS

./: .env.example  .gitignore  .trivyignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/: dependabot.yml
admin/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
api/: Cargo.toml  Dockerfile  audit.toml  deny.toml
api/migrations/: 001_create_users.sql  002_create_databases.sql  003_create_invitations.sql  004_create_migrations.sql  005_add_bundle_id.sql  006_create_database_users.sql  007_mariadb_backups_tls.sql  008_billing_system.sql  009_docker_servers_and_seed_plans.sql  010_server_type_and_placement.sql  011_deduplicate_plans.sql  012_private_networks.sql  013_network_subnet.sql  014_fix_billing_fk.sql  015_add_subdomain.sql  016_network_peering.sql  017_backup_schedules.sql  018_audit_logs.sql  019_alerts.sql  020_user_favorites.sql  021_platform_settings.sql
api/src/: config.rs  error.rs  extract.rs  lib.rs  main.rs
api/src/handlers/: admin.rs  alerts.rs  audit.rs  auth.rs  billing.rs  databases.rs  docker_servers.rs  metrics.rs  migrations.rs  mod.rs  private_networks.rs
api/src/middleware/: admin.rs  auth.rs  maintenance.rs  metrics.rs  mod.rs  rate_limit.rs  security_headers.rs
api/src/models/: alert.rs  audit.rs  backup_schedule.rs  billing.rs  database.rs  docker_server.rs  invitation.rs  mod.rs  private_network.rs  user.rs
api/src/repository/: alert_repo.rs  audit_repo.rs  backup_schedule_repo.rs  billing_repo.rs  database_repo.rs  docker_server_repo.rs  favorite_repo.rs  invitation_repo.rs  mod.rs  private_network_repo.rs  user_repo.rs
api/src/services/: alert.rs  backup.rs  billing.rs  cleanup.rs  metrics.rs  migration.rs  mod.rs  provisioner.rs  tls.rs  traefik.rs
api/src/utils/: crypto.rs  docker.rs  mod.rs  port_pool.rs  subdomain.rs
api/tests/: auth_test.rs  database_test.rs  provisioner_test.rs
api/tests/common/: mod.rs
dns/: Dockerfile  entrypoint.sh  unbound.conf
nftables-helper/: Dockerfile
web/: Dockerfile  (+2 more)
(+41 files in other folders)
